--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,7 +19,7 @@ a {
   display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
+  background-color: rgba(255, 255, 255, 0.1);
   border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
   border-width: 1px;
@@ -57,7 +57,13 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+    background: linear-gradient(
+    to bottom,
+    rgba(0,0,0, 0),
+    10%,
+    rgba(0,0,0, 100)
+  ),url(../images/header.jpg);
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -112,7 +118,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: black; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
